--- a/container/public/index.html
+++ b/container/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   
-  <div id="dev-products"></div>
-  <div id="dev-cart"></div>
+  <div id="product-list"></div>
+  <div id="my-cart"></div>
 </body>
 </html>
